; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_context.c_glfwGetProcAddress.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_context.c_glfwGetProcAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLFW_NO_CURRENT_CONTEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @glfwGetProcAddress(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = call i32 @_GLFW_REQUIRE_INIT_OR_RETURN(i32* null)
  %5 = call i32 (...) @_glfwPlatformGetCurrentContext()
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @GLFW_NO_CURRENT_CONTEXT, align 4
  %9 = call i32 @_glfwInputError(i32 %8, i32* null)
  store i32* null, i32** %2, align 8
  br label %13

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32* @_glfwPlatformGetProcAddress(i8* %11)
  store i32* %12, i32** %2, align 8
  br label %13

13:                                               ; preds = %10, %7
  %14 = load i32*, i32** %2, align 8
  ret i32* %14
}

declare dso_local i32 @_GLFW_REQUIRE_INIT_OR_RETURN(i32*) #1

declare dso_local i32 @_glfwPlatformGetCurrentContext(...) #1

declare dso_local i32 @_glfwInputError(i32, i32*) #1

declare dso_local i32* @_glfwPlatformGetProcAddress(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
